--- a/ImageCompareMap/ImageCompareMap.csproj
+++ b/ImageCompareMap/ImageCompareMap.csproj
@@ -91,8 +91,8 @@
       <DependentUpon>StartPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converter\HashToStringConverter.cs" />
-    <Compile Include="Interface\ViewModel\AbstractVM.cs" />
-    <Compile Include="Interface\ViewModel\Window1ViewModel.cs" />
+    <Compile Include="Interface\ViewModel\Notifyable.cs" />
+    <Compile Include="Interface\ViewModel\StartPageViewModel.cs" />
     <Compile Include="Model\Hash.cs" />
     <Compile Include="Interface\ViewModel\ScanSetupViewModel.cs" />
     <Page Include="Interface\View\MainWindow.xaml">
